--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "distrito-joven-postgres",
   "version": "1.0.0",
-  "description": "Website template for Payload",
+  "description": "Distrito Joven",
   "license": "MIT",
   "type": "module",
   "scripts": {
@@ -18,6 +18,7 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@payloadcms/db-vercel-postgres": "beta",
     "@payloadcms/live-preview-react": "beta",
     "@payloadcms/next": "beta",
     "@payloadcms/plugin-cloud": "beta",
@@ -31,10 +32,11 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "embla-carousel-react": "^8.3.0",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
     "jsonwebtoken": "9.0.2",
@@ -49,8 +51,7 @@
     "react-hook-form": "7.45.4",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@payloadcms/db-vercel-postgres": "beta"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
@@ -61,13 +62,13 @@
     "@types/node": "22.5.4",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "copyfiles": "^2.4.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-canary.173",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.47",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.13",
     "typescript": "5.6.2"
   },
   "engines": {
